@@ -4,10 +4,10 @@ scons: *** [prog.o] Source `prog.c' not found, needed by target `prog.o'.
 scons: internal stack trace:
   File "bootstrap/src/engine/SCons/Job.py", line 199, in start
     task.prepare()
-  File "bootstrap/src/engine/SCons/Script/Main.py", line 173, in prepare
+  File "bootstrap/src/engine/SCons/Script/Main.py", line 164, in prepare
     return SCons.Taskmaster.OutOfDateTask.prepare(self)
   File "bootstrap/src/engine/SCons/Taskmaster.py", line 191, in prepare
     executor.prepare()
-  File "bootstrap/src/engine/SCons/Executor.py", line 430, in prepare
+  File "bootstrap/src/engine/SCons/Executor.py", line 427, in prepare
     raise SCons.Errors.StopError(msg % (s, self.batches[0].targets[0]))
 </screen>
